# soc-ai

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  PUSH-STEPS.md  README.md  docker-compose.demo.yml  docker-compose.yml  mkdocs.yml  pyproject.toml  render.yaml  setup.conf.example  setup.sh
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml  demo-deploy.yml  docs.yml  release.yml
docker/: demo-entrypoint.sh
docs/: AGENT_TOOLS.md  ARCHITECTURE.md  BLOCKLISTS.md  DEPLOYMENT.md  DOCKER.md  OQL_HUNT_EXAMPLES.md  OQL_PRIMER.md  ROADMAP.md  SAFETY_MODEL.md  SECURITY-ONION-SETUP.md  SENSOR_PCAP_SETUP.md  TEST_PCAPS.md  WEBUI_GUIDE.md  index.md  quickstart.md
docs/blog/: 2026-07-getting-an-llm-to-show-its-work.md
docs/demo/: install-walkthrough.cast  make_walkthrough_cast.py  record_browser_walkthrough.mjs
docs/project/: changelog.md  contributing.md  security.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Badges.tsx  Button.tsx  ChatDock.tsx  ConfidenceRing.tsx  Controls.tsx  Drawer.tsx  EntityGraph.tsx  ErrorBoundary.test.tsx  ErrorBoundary.tsx  FlowBadge.tsx  HostActivityTimeline.tsx  HuntVisuals.tsx  (+10 more)
runbooks/starter-pack/: authorized-scanner-false-positives.md  beaconing-c2-triage.md  brute-force-password-spray.md  cryptomining.md  data-exfiltration.md  dns-tunneling-anomalies.md  lateral-movement-smb-rdp.md  noisy-rule-tuning.md  phishing-initial-access.md  tls-certificate-anomalies.md
scripts/: deploy.sh  setup-audit-index.sh
scripts/cron.d/: soc-ai-blocklists.example
scripts/demo/: build_fixtures.py  capture.mjs  demo_chats.json  demo_dataset.py  demo_hunts.json  mock_es.py  run_demo_capture.sh  seed_demo.py
scripts/systemd/: soc-ai-blocklists.service  soc-ai-blocklists.timer  soc-ai.service
soc_ai/: __init__.py  __main__.py  backup.py  cli.py  config.py  doctor.py  errors.py  main.py  metrics.py  notify.py  triage_models.py
soc_ai/agent/: __init__.py  _gateway_retry.py  _partial_replay.py  chat_agent.py  classifier.py  context.py  context_budget.py  decision_templates.py  egress_guard.py  enrichment_cache.py  evidence.py  gates.py  hunt.py  hunt_gates.py  models.py  narrative_grounding.py  orchestrator.py  prompts.py  proposal_validation.py  reasoning.py  targeted_investigator.py  toolset.py  triage.py
soc_ai/api/: __init__.py  agent_tools.py  approvals.py  data_sources.py  deps.py  hunt_recorder.py  hunt_runner.py  recorder.py  routes.py  runner.py  schemas.py  security.py  webui_api.py
soc_ai/audit/: __init__.py  chain.py  counts.py  logger.py  redact.py  schemas.py  verify.py
soc_ai/demo/: __init__.py  chat.py  fixtures.json  fixtures.py  guard.py  hunt_replay.py  replay.py
soc_ai/enrichment/: __init__.py  blocklist_refresh.py  blocklists.py  cloud_tags.py  discovery.py  maxmind.py  refresh.py  zeek_parser.py
soc_ai/eval/: __init__.py  batch.py  harness.py  meta_analysis.py  nightly.py  oracle_client.py  prompt.py  quality.py  report.py  sampler.py  sanitize.py  synth_ingest.py  synth_loader.py  synth_render.py  synth_score.py
soc_ai/mcp_server/: __init__.py  __main__.py  server.py
soc_ai/oracle/: __init__.py  client.py  identifiers.py  redact.py  sanitize.py
soc_ai/rag/: __init__.py  runbook_embeddings.py
soc_ai/so_client/: __init__.py  auth.py  elastic.py  fields.py  inventory.py  models.py  oql.py  oql_fields.json
soc_ai/store/: __init__.py  alembic.ini  assignments.py  auth.py  backtests.py  chat.py  chat_memory.py  config_overrides.py  db.py  detection_overrides.py  hunt_schedules.py  hunt_templates.py  hunts.py  internal_identifiers.py  investigations.py  models.py  quality.py  runbook_pack.py  runbooks.py  secret_box.py  signing.py
soc_ai/tools/: __init__.py  _registry.py  ack_alert.py  add_case_comment.py  crawl_page.py  cvedb.py  decode_payload.py  discover.py  enrichment.py  escalate_to_case.py  get_alert_context.py  get_event_raw.py  get_pcap.py  get_playbooks.py  get_rule_content.py  greynoise.py  host_summary.py  lookup_runbook.py  online.py  os_hint.py  pcap_decode.py  prevalence.py  query_cases.py  query_detections.py  query_events.py  query_zeek.py  rule_prevalence.py  rule_tuning.py  shodan_host.py  shodan_internetdb.py  tuning_heuristic.py  web_search.py  write_exec.py
soc_ai/webui/: __init__.py  alerts_query.py  autotriage.py  backtest.py  chat_manager.py  deps.py  detection_tuning.py  hunt_console_manager.py  hunt_manager.py  probes.py  runbook_promotion.py  timeline_labels.py
tests/: conftest.py  test_agent.py  test_agent_tools.py  test_analyst_redaction_preview.py  test_api.py  test_api_auth.py  test_assignments.py  test_audit.py  test_audit_verify.py  test_autotriage.py  test_backtest.py  test_backup.py  test_blocklist_refresh.py  test_chat_manager.py  test_chat_memory.py  test_chat_store.py  test_classifier.py  test_cli.py  test_config.py  test_context_budget.py  test_crawl_page.py  test_csrf.py  test_cvedb.py  test_data_sources.py  test_decision_templates.py  test_decode_payload.py  test_deep_rerun.py  test_demo_fixtures.py  test_demo_leak_gate.py  test_demo_mock_es.py  test_demo_mode.py  test_detection_tuning.py  test_discover.py  test_discovery.py  test_docs_accuracy.py  test_doctor.py  test_egress_guard.py  test_enrichment.py  test_enrichment_blocklists.py  test_enrichment_cloud_tags.py  (+84 more)
tests/browser/: conftest.py  test_demo_walkthrough.py  test_smoke.py  test_userscript_e2e.py
tests/fixtures/: kratos_login_init.json  kratos_login_success.json  oauth_token.json  sample_alert.json  sample_case.json  sample_detection.json  sample_playbook.json
tests/golden/: __init__.py  harness.py  model_double.py  scenarios.py
userscript/: README.md  soc-ai.user.js
(+127 files in other folders)
